/*

 MIT License

 Copyright (c) 2021 Looker Data Sciences, Inc.

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.

 */

import React from 'react'
import { assertSnapshot } from '@looker/components-test-utils'
import { Paragraph } from './Paragraph'

describe('Paragraph', () => {
  test('default', () => assertSnapshot(<Paragraph>Hello</Paragraph>))

  test('fontSize', () =>
    assertSnapshot(<Paragraph fontSize="xxxxlarge">Hello</Paragraph>))

  test('textAlign', () =>
    assertSnapshot(<Paragraph textAlign="right">Hello</Paragraph>))

  test('fontWeight', () =>
    assertSnapshot(<Paragraph fontWeight="bold">Hello</Paragraph>))

  test('color', () =>
    assertSnapshot(<Paragraph color="critical">Hello</Paragraph>))

  test('textTransform', () =>
    assertSnapshot(<Paragraph textTransform="uppercase">Hello</Paragraph>))

  test('breakword', () =>
    assertSnapshot(<Paragraph breakword>Hello</Paragraph>))

  test('textDecoration', () =>
    assertSnapshot(<Paragraph textDecoration="line-through">Hello</Paragraph>))

  test('truncate', () => assertSnapshot(<Paragraph truncate>Hello</Paragraph>))

  test('multiline truncate', () =>
    assertSnapshot(<Paragraph truncateLines={2}>Hello</Paragraph>))
})
