// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph breakword 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
  overflow-wrap: break-word;
}

<p
  className="c0 "
>
  Hello
</p>
`;

exports[`Paragraph color 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #CC1F36;
}

<p
  className="c0 "
>
  Hello
</p>
`;

exports[`Paragraph default 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
}

<p
  className="c0 "
>
  Hello
</p>
`;

exports[`Paragraph fontSize 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 2.25rem;
  line-height: 2.75rem;
  color: #262D33;
}

<p
  className="c0 "
>
  Hello
</p>
`;

exports[`Paragraph fontWeight 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  color: #262D33;
}

<p
  className="c0 "
>
  Hello
</p>
`;

exports[`Paragraph multiline truncate 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
}

.c1 {
  -webkit-box-orient: vertical;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  overflow: hidden;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`Paragraph textAlign 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  text-align: right;
  color: #262D33;
}

<p
  className="c0 "
>
  Hello
</p>
`;

exports[`Paragraph textDecoration 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<p
  className="c0 "
  textDecoration="line-through"
>
  Hello
</p>
`;

exports[`Paragraph textTransform 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
}

.c1 {
  text-transform: uppercase;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`Paragraph truncate 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #262D33;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;
